--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div>
           <div style="font-weight:700">Nandini Bhardwaj</div>
           <div style="font-size:12px;color:var(--muted)">Literature · Sketch Artist · Digital</div>
+          <div style="font-size:12px;color:var(--muted)">If viewing on mobile, kindly rotate for best viewing.</div>
         </div>
       </div>
       <nav>
@@ -78,3 +79,4 @@
   </script>
 </body>
 </html>
+
